[package]
name = "diesel_models"
description = "Database types shared across `router` and other crates"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]
default = ["kv_store"]
kv_store = []
v1 = ["common_utils/v1", "common_types/v1"]
v2 = ["common_utils/v2", "common_types/v2"]
tokenization_v2 = []

[dependencies]
async-bb8-diesel = "0.2.1"
diesel = { version = "2.2.10", features = ["postgres", "serde_json", "time", "128-column-tables"] }
error-stack = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.69"
time = { version = "0.3.41", features = ["serde", "serde-well-known", "std"] }


# First party crates
common_enums = { version = "0.1.0", path = "../common_enums" }
common_utils = { version = "0.1.0", path = "../common_utils" }
common_types = { version = "0.1.0", path = "../common_types" }
masking = { version = "0.1.0", path = "../masking" }
router_derive = { version = "0.1.0", path = "../router_derive" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }

[lints]
workspace = true
