[package]
name = "euclid"
description = "DSL for static routing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nom = { version = "7.1.3", features = ["alloc"], optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.69"
utoipa = { version = "4.2.3", features = ["preserve_order", "preserve_path_order"] }

# First party dependencies
common_enums = { version = "0.1.0", path = "../common_enums" }
common_utils = { version = "0.1.0", path = "../common_utils" }
euclid_macros = { version = "0.1.0", path = "../euclid_macros" }
hyperswitch_constraint_graph = { version = "0.1.0", path = "../hyperswitch_constraint_graph", features = ["viz"] }

[features]
default = []
ast_parser = ["dep:nom"]
valued_jit = []
dummy_connector = []
payouts = []
v2 = ["common_enums/v2"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "backends"
harness = false
required-features = ["ast_parser", "valued_jit"]

[lints]
workspace = true
