[package]
name = "euclid_macros"
description = "Macros for Euclid DSL"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
rustc-hash = "1.1.0"
strum = { version = "0.26", features = ["derive"] }
syn = "2.0.101"

[lints]
workspace = true
