[package]
name = "euclid_wasm"
description = "WASM bindings for Euclid DSL"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["connector_choice_bcompat", "payouts", "connector_choice_mca_id"]
release = ["connector_choice_bcompat", "connector_choice_mca_id", "payouts"]
connector_choice_bcompat = ["api_models/connector_choice_bcompat"]
connector_choice_mca_id = ["api_models/connector_choice_mca_id", "euclid/connector_choice_mca_id", "kgraph_utils/connector_choice_mca_id"]
dummy_connector = ["kgraph_utils/dummy_connector", "connector_configs/dummy_connector"]
production = ["connector_configs/production"]
development = ["connector_configs/development"]
sandbox = ["connector_configs/sandbox"]
payouts = ["api_models/payouts", "euclid/payouts"]

[dependencies]
api_models = { version = "0.1.0", path = "../api_models", package = "api_models" }
currency_conversion = { version = "0.1.0", path = "../currency_conversion" }
connector_configs = { version = "0.1.0", path = "../connector_configs" }
euclid = { path = "../euclid", features = [] }
kgraph_utils = { version = "0.1.0", path = "../kgraph_utils" }
common_enums = { version = "0.1.0", path = "../common_enums" }

# Third party crates
getrandom = { version = "0.2.10", features = ["js"] }
once_cell = "1.18.0"
ron-parser = "0.1.4"
serde = { version = "1.0", features = [] }
serde-wasm-bindgen = "0.5"
strum = { version = "0.25", features = ["derive"] }
wasm-bindgen = { version = "0.2.86" }
