[package]
name = "euclid_wasm"
description = "WASM bindings for Euclid DSL"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["payouts"]
release = ["payouts"]
dummy_connector = ["kgraph_utils/dummy_connector", "connector_configs/dummy_connector"]
production = ["connector_configs/production"]
sandbox = ["connector_configs/sandbox"]
payouts = ["api_models/payouts", "common_enums/payouts", "euclid/payouts"]
v1 = ["api_models/v1", "kgraph_utils/v1", "payouts"]
v2 = []

[dependencies]
api_models = { version = "0.1.0", path = "../api_models", package = "api_models" }
common_enums = { version = "0.1.0", path = "../common_enums" }
common_types = { version = "0.1.0", path = "../common_types" }
connector_configs = { version = "0.1.0", path = "../connector_configs" }
currency_conversion = { version = "0.1.0", path = "../currency_conversion" }
euclid = { version = "0.1.0", path = "../euclid", features = [] }
hyperswitch_constraint_graph = { version = "0.1.0", path = "../hyperswitch_constraint_graph" }
kgraph_utils = { version = "0.1.0", path = "../kgraph_utils" }

# Third party crates
getrandom = { version = "0.2.16", features = ["js"] }
ron-parser = "0.1.4"
serde = { version = "1.0", features = [] }
serde-wasm-bindgen = "0.6.5"
strum = { version = "0.26", features = ["derive"] }
wasm-bindgen = { version = "0.2.100" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lints]
workspace = true
