[package]
name = "events"
description = "Events framework for generating events & some sample implementations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]

# First Party crates 
masking = { version = "0.1.0", path = "../masking" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"]}

# Third party crates
actix-web = "4.3.1"
error-stack = "0.3.1"
serde_json = "1.0.114"
thiserror = "1.0.58"
time = "0.3.34"