[package]
name = "events"
description = "Events framework for generating events & some sample implementations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# First Party crates
masking = { version = "0.1.0", path = "../masking" }
router_env = { version = "0.1.0", path = "../router_env" }

# Third Party crates
error-stack = "0.4.1"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
time = "0.3.34"
