[package]
name = "external_services"
description = "Interactions of the router with external systems"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true

[features]
aws_kms = ["dep:aws-config", "dep:aws-sdk-kms"]
email = ["dep:aws-config"]
aws_s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
hashicorp-vault = ["dep:vaultrs"]
v1 = ["hyperswitch_interfaces/v1", "common_utils/v1"]
dynamic_routing = ["dep:prost", "dep:tonic", "dep:tonic-reflection", "dep:tonic-types", "dep:api_models", "tokio/macros", "tokio/rt-multi-thread", "dep:tonic-build", "dep:router_env", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
async-trait = "0.1.79"
aws-config = { version = "0.55.3", optional = true }
aws-sdk-kms = { version = "0.28.0", optional = true }
aws-sdk-s3 = { version = "0.28.0", optional = true }
aws-sdk-sesv2 = "0.28.0"
aws-sdk-sts = "0.28.0"
aws-smithy-client = "0.55.3"
base64 = "0.22.0"
dyn-clone = "1.0.17"
error-stack = "0.4.1"
hex = "0.4.3"
hyper = "0.14.28"
hyper-proxy = "0.9.1"
lettre = "0.11.10"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
vaultrs = { version = "0.7.2", optional = true }
prost = { version = "0.13", optional = true }
tokio = "1.37.0"
tonic = { version = "0.12.2", optional = true }
tonic-reflection = { version = "0.12.2", optional = true }
tonic-types = { version = "0.12.2", optional = true }
hyper-util = { version = "0.1.9", optional = true }
http-body-util = { version = "0.1.2", optional = true }


# First party crates
common_utils = { version = "0.1.0", path = "../common_utils" }
hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces", default-features = false }
masking = { version = "0.1.0", path = "../masking" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
api_models = { version = "0.1.0", path = "../api_models", optional = true }


[build-dependencies]
tonic-build = { version = "0.12", optional = true }
router_env = { version = "0.1.0", path = "../router_env", default-features = false, optional = true }

[lints]
workspace = true
