[package]
name = "hsdev"
version = "0.1.0"
license.workspace = true 
edition.workspace = true
rust-version.workspace = true 
description = "A simple diesel postgres migrator that uses TOML files"
repository = "https://github.com/juspay/hyperswitch.git"
readme = "README.md"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres"] }
diesel_migrations = "2.1.0"
toml = "0.5"
clap = { version = "4.1.8", features = ["derive"] }
