[package]
name = "hyperswitch_connector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First party crates
api_models = { version = "0.1.0", path = "../api_models" }
common_enums = { version = "0.1.0", path = "../common_enums" }
common_utils = { version = "0.1.0", path = "../common_utils" }
core_types = { version = "0.1.0", path = "../core_types" }
events = { version = "0.1.0", path = "../events" }
masking = { version = "0.1.0", path = "../masking" }
router_derive = { version = "0.1.0", path = "../router_derive" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
reqwest = { version = "0.11.27", features = ["json", "native-tls", "gzip", "multipart"] }

# Third party crates
async-trait = "0.1.79"
bytes = "1.6.0"
error-stack = "0.4.1"
http = "0.2.12"
mime = "0.3.17"
serde = "1.0.197"
serde_json = "1.0.115"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3.35", features = ["serde", "serde-well-known", "std"] }
