[package]
name = "hyperswitch_connectors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
frm = ["hyperswitch_domain_models/frm", "hyperswitch_interfaces/frm"]
payouts = ["hyperswitch_domain_models/payouts", "api_models/payouts", "hyperswitch_interfaces/payouts"]
v1 = ["api_models/v1", "hyperswitch_domain_models/v1", "common_utils/v1"]
v2 = ["api_models/v2", "hyperswitch_domain_models/v2", "common_utils/v2", "hyperswitch_interfaces/v2"]
revenue_recovery = ["hyperswitch_interfaces/revenue_recovery", "hyperswitch_domain_models/revenue_recovery"]

[dependencies]
actix-http = "3.6.0"
actix-web = "4.5.1"
async-trait = "0.1.79"
base64 = "0.22.0"
bytes = "1.6.0"
encoding_rs = "0.8.33"
error-stack = "0.4.1"
hex = "0.4.3"
http = "0.2.12"
iso_currency = "0.4.4"
isocountry = "0.3.2"
image = { version = "0.25.1", default-features = false, features = ["png"] }
josekit = { git = "https://github.com/sumanmaji4/josekit-rs.git", rev = "5ab54876c29a84f86aef8c169413a46026883efe", features = ["support-empty-payload"] }
mime = "0.3.17"
num-traits = "0.2.19"
qrcode = "0.14.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.11.27" }
ring = "0.17.8"
roxmltree = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.12.0"
serde_repr = "0.1.19"
serde_urlencoded = "0.7.1"
unidecode = "0.3.0"
serde_with = "3.7.0"
sha1 = { version = "0.10.6" }
strum = { version = "0.26", features = ["derive"] }
time = "0.3.35"
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order", "time"] }
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
lazy_static = "1.4.0"
unicode-normalization = "0.1.21"
html-escape = "0.2"
# First party crates
api_models = { version = "0.1.0", path = "../api_models", features = ["errors"], default-features = false }
cards = { version = "0.1.0", path = "../cards" }
common_enums = { version = "0.1.0", path = "../common_enums" }
common_types = { version = "0.1.0", path = "../common_types" }
common_utils = { version = "0.1.0", path = "../common_utils", features = ["async_ext", "logs", "metrics", "crypto_openssl"] }
hyperswitch_domain_models = { version = "0.1.0", path = "../hyperswitch_domain_models", default-features = false }
hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces", default-features = false }
masking = { version = "0.1.0", path = "../masking" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }

[lints]
workspace = true
