[package]
name = "hyperswitch_constraint_graph"
description = "Constraint Graph Framework for modeling Domain-Specific Constraints"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
viz = ["dep:graphviz-rust"]

[dependencies]
erased-serde = "0.3.31"
graphviz-rust = { version = "0.6.6", optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.69"

[lints]
workspace = true
